--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@
 
 # Log file
 *.log
+/logs
+*/logs
 
 # BlueJ files
 *.ctxt
+*.iml
+.idea
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -18,7 +22,21 @@
 *.zip
 *.tar.gz
 *.rar
+.flattened-pom.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# OS generated files #
+######################
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# Build output directies
+/target
+*/target
+/build
+*/build
