--- a/flow-engine-spring-boot-starter/pom.xml
+++ b/flow-engine-spring-boot-starter/pom.xml
@@ -15,7 +15,15 @@
     <packaging>jar</packaging>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.hellobike.finance</groupId>
+            <artifactId>flow-engine-core</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
