--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,15 @@
                 <scope>test</scope>
                 <optional>true</optional>
             </dependency>
+            <!-- ================================================= -->
+            <!-- Spring -->
+            <!-- ================================================= -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-autoconfigure</artifactId>
+                <version>2.2.6.RELEASE</version>
+                <optional>true</optional>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
