--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,16 @@
     </modules>
 
     <properties>
-        <revision>1.0</revision>
+        <revision>1.0.0</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
 
         <logback.version>1.2.3</logback.version>
-        <jackson.version>2.14.0-rc2</jackson.version>
         <dom4j.version>2.1.3</dom4j.version>
         <lombok.version>1.18.26</lombok.version>
         <junit.version>5.8.2</junit.version>
+        <spring.boot.version>2.2.6.RELEASE</spring.boot.version>
     </properties>
 
     <dependencyManagement>
@@ -42,11 +42,6 @@
             <!-- ================================================= -->
             <!-- 工具类 -->
             <!-- ================================================= -->
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
-            </dependency>
             <dependency>
                 <groupId>org.dom4j</groupId>
                 <artifactId>dom4j</artifactId>
@@ -74,7 +69,14 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-autoconfigure</artifactId>
-                <version>2.2.6.RELEASE</version>
+                <version>${spring.boot.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring.boot.version}</version>
+                <scope>test</scope>
                 <optional>true</optional>
             </dependency>
         </dependencies>
